--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "swiper": "^11.0.6",
     "web-vitals": "^2.1.4"
